[tool.poetry]
name = "hair-inpainting"
version = "0.1.0"
description = ""
authors = ["Vadim Titko <vtitko27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
diffusers = "^0.32.2"
torch = "^2.6.0"
transformers = "^4.48.2"
accelerate = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
